--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2018"
 gl = "0.14.0"
 glfw = "0.41.0"
 glam = "0.17.3"
-serde = { version = "1.0.130", features = ["derive"] }
-serde_json = "1.0.59"
+
+[dependencies.gltf]
+version = "0.16"
+features = ["extras", "names"]
